# cpluspluscomicconverter

./: .gitignore  CMakeLists.txt  README.md
gui/: ConversionWorker.cpp  ConversionWorker.h  MainWindow.cpp  MainWindow.h  main.cpp
src/: cbz_creator.cpp  cbz_creator.h  cbz_to_pdf_converter.cpp  cbz_to_pdf_converter.h  converter_service.cpp  converter_service.h  main.cpp  pdf_creator.cpp  pdf_creator.h  pdf_image_extractor.cpp  pdf_image_extractor.h
